Module_6/Task3/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  namespace: default
  labels:
    role: app
spec:
  containers:
  - name: app-container
    image: busybox
    command: ["sleep", "3600"]
