Module_6/Task3/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: default
  labels:
    role: database
spec:
  containers:
  - name: db-container
    image: postgres:15.12
